Fixing menu z-index bug and restructuring homepage code.

--- a/drupal/sites/all/themes/sronline/css/core.css
+++ b/drupal/sites/all/themes/sronline/css/core.css
@@ -173,7 +173,7 @@ body {
   color: white;
   text-shadow: #c46c00 0 -1px 0;
 }
-/* line 10, ../../../../../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/sassy-buttons-0.1.0/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 10, ../../../../../../../../../../../opt/local/lib/ruby1.9/gems/1.9.1/gems/sassy-buttons-0.1.0/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .form-submit:hover {
   background-color: #e67e00;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(3%, #ffa333), color-stop(75%, #e67e00));
@@ -183,7 +183,7 @@ body {
   background: -ms-linear-gradient(#ffa333 3%, #e67e00 75%);
   background: linear-gradient(#ffa333 3%, #e67e00 75%);
 }
-/* line 13, ../../../../../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/sassy-buttons-0.1.0/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 13, ../../../../../../../../../../../opt/local/lib/ruby1.9/gems/1.9.1/gems/sassy-buttons-0.1.0/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .form-submit:active {
   -webkit-box-shadow: #d67600 0 1px 2px inset;
   -moz-box-shadow: #d67600 0 1px 2px inset;
@@ -276,13 +276,18 @@ div#header #submit_btn {
   /*for each anchor in a list*/
 }
 /* line 24, ../scss/_navigation.scss */
+.menu-block-2 > ul {
+  position: absolute;
+  z-index: 500;
+}
+/* line 29, ../scss/_navigation.scss */
 .menu-block-2 ul li {
   list-style: none;
   /* removes bullets on list*/
   float: left;
   position: relative;
 }
-/* line 31, ../scss/_navigation.scss */
+/* line 36, ../scss/_navigation.scss */
 .menu-block-2 ul li a {
   display: block;
   text-align: center;
@@ -292,21 +297,21 @@ div#header #submit_btn {
   text-decoration: none;
   padding: 10px;
 }
-/* line 39, ../scss/_navigation.scss */
+/* line 44, ../scss/_navigation.scss */
 .menu-block-2 ul li a:hover {
   background: url(../images/Hover_bg.jpg) repeat-x left top;
   color: green;
 }
-/* line 41, ../scss/_navigation.scss */
+/* line 46, ../scss/_navigation.scss */
 .menu-block-2 ul li.expanded ul.menu {
   display: none;
   float: none;
 }
-/* line 44, ../scss/_navigation.scss */
+/* line 49, ../scss/_navigation.scss */
 .menu-block-2 ul li.expanded ul.menu a {
   border-right: none;
 }
-/* line 46, ../scss/_navigation.scss */
+/* line 51, ../scss/_navigation.scss */
 .menu-block-2 ul li.expanded:hover ul {
   display: block;
   position: absolute;
